# Airmoney

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  steam_market_matches.csv  steam_market_matches.html  steam_monitor.py  steam_monitor_alert.html  steam_monitor_log.txt  steam_parser.py  steam_seen_alerts.json
airmoney/: __init__.py
config/: default_settings.yaml
docker/: entrypoint.sh
examples/: catalog.example.yaml
src/airmoney/: __init__.py  __main__.py  main.py  paths.py
src/airmoney/analytics/: __init__.py  scan_diagnostics.py
src/airmoney/anomaly/: __init__.py  analyzer.py  baselines.py  candidates.py  exit_risk.py  history.py  matching.py  models.py  scoring.py
src/airmoney/config/: catalog_import.py  import_export.py  models.py
src/airmoney/currency/: cache.py  provider.py  steam_currency.py
src/airmoney/recommendation/: engine.py  profit.py  scoring.py
src/airmoney/reports/: csv_export.py  html_export.py  (+1 more)
tests/: test_anomaly.py  test_catalog_import.py  test_collections.py  test_config_import_export.py  test_currency.py  test_legacy_import.py  test_listing_currency_metadata.py  test_migrations.py  test_monitor_service.py  test_price_parser.py  test_profit.py  test_recommendation.py  test_repository_lifecycle.py  test_safe_scan_optimization.py  test_scan_diagnostics.py  test_steam_extractor.py  test_steam_proxy.py  test_telegram_alerts.py  test_telegram_notifier.py  test_web_candidate_open.py  test_web_items.py  test_web_security.py
vpn/: README.md  sing-box.example.json
(+37 files in other folders)
